Changes for 2.3.6

Bug fixes:
..F....... [ZBX-8685] fixed ordering of graphs in simple graph prototype and graph prototype screen elements (Krists)
..F....... [ZBX-8662] fixed multiselect and text input alignment (Pavels)
..F....... [ZBX-8715] fixed item flex interval updating in item massupdate (Krists)
..F....... [ZBX-8710] fixed LLD graph prototype screen items to be displayed correctly when containing item has colspan/rowspan set (Krists)
..F....... [ZBX-8532] fixed frontend messaging sounds not playing on IE11 and playing in loop if set to play once on other browsers (Ivo)

--------------------------------------------------------------------------------
Changes for 2.3.5

Bug fixes:
..F....... [ZBX-8714] fixed confirmation dialogs when performing a mass action (Pavels)
A......... [ZBX-8634] fixed trigger prototype validation to disallow items from both templates and hosts in same trigger prototype (Krists)
..F....... [ZBX-8701] fixed disabled web scenarios being displayed in the web monitoring widget (Pavels)
..F....... [ZBX-8707] fixed not being able to add an action operation condition (Pavels)
..F....... [ZBX-8702] changed the default graph palette to generate the first line in green color and the second in red (Pavels)
..F....... [ZBX-3407] fixed NVPS query to not fail on DB2 (Krists)
...G...... [ZBX-8646] added a warning on UNIX/GNU/Linux platforms if logrt[] directory has no 'execute' permission (Andris)
........S. [ZBX-8541] fixed queue calculation when hosts with active items return from no data maintenance (asaveljevs)
..F....... [ZBX-8683] fixed misplaced 'Add' button for IT Services having child services (Alexei)

--------------------------------------------------------------------------------
Changes for 2.3.4

New features:
...G...PS. [ZBXNEXT-101] added functionality for changing log level at runtime, added new trace log level for extended web and vmware monitoring (asaveljevs, igors, wiper)